# whisper_go

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.de.md  README.md  build_app.sh  build_app.spec  build_dmg.sh  build_windows.ps1  build_windows.py  build_windows.spec  build_windows_light.spec  config.py  hotkey_daemon.py  installer_windows.iss  menubar.py  overlay.py  prompts.py  pulsescribe_daemon.py  pulsescribe_windows.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_daemon.command  transcribe.py  whisper_daemon.py
audio/: __init__.py  recording.py
cli/: __init__.py  types.py
docs/: BUILDING_MACOS.md  BUILDING_WINDOWS.md  CLI_REFERENCE.md  CONFIGURATION.md  KONFIGURATION.md  LOCAL_BACKENDS.md  LOKALE_BACKENDS.md  NETWORK.md  NETZWERK.md  PLAN_PYSIDE6_OVERLAY.md  SECURITY.md  SICHERHEIT.md  VISION.md  WINDOWS_ANALYSIS.md  WINDOWS_MVP.md
providers/: __init__.py  deepgram.py  deepgram_stream.py  groq.py  local.py  openai.py
refine/: __init__.py  context.py  llm.py  prompts.py
scripts/: karabiner-ptt.json
tests/: __init__.py  conftest.py  test_alerts.py  test_cli.py  test_config.py  test_context.py  test_custom_prompts.py  test_daemon_mode.py  test_extraction.py  test_history.py  test_hotkey.py  test_local_feedback.py  test_menubar.py  test_onboarding.py  test_process.py  test_prompts.py  test_refine.py  test_settings_ui.py  test_transcribe.py  test_vocabulary.py
ui/: __init__.py  animation.py  hotkey_card.py  menubar.py  onboarding_wizard.py  onboarding_wizard_windows.py  overlay.py  overlay_pyside6.py  (+5 more)
(+53 files in other folders)
