[project]
name = "pulsescribe"
version = "1.0.0"
description = "Spracheingabe für macOS – Transkription mit OpenAI Whisper, Deepgram, Groq oder lokal"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "menubar.py",           # GUI-Code (rumps) - schwer testbar
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
# Audio/Streaming-Code ist bewusst nicht getestet (Hardware-abhängig)
# Erwartete Coverage für transcribe.py: ~30-40% (Kernfunktionen)
# Erwartete Coverage für prompts.py: 100%

[tool.pyright]
pythonVersion = "3.10"
# pyobjc (Quartz/Foundation) hat keine Type Stubs – auf macOS funktioniert der Code.
# Diese Regel ist für dieses Projekt nicht sinnvoll.
reportAttributeAccessIssue = "none"
